changed button colors, fixed spacing on /notes

--- a/epic_notes/public/stylesheets/style.css
+++ b/epic_notes/public/stylesheets/style.css
@@ -86,6 +86,20 @@ align-items: : left;
 	width: 20%;
 }
 
+.btn {
+	background-color: #05386B;
+	border-color: #05386B;
+}
+
+#logged-in-as {
+	margin-left: 20px;
+	padding-top: 10px;
+}
+
+.list-group-item-action .active {
+	background-color: #05386B;
+}
+
 footer {
 	padding: 50px;
 }
